--- a/InvestmentBuilderLib/InvestmentBuilderLib.csproj
+++ b/InvestmentBuilderLib/InvestmentBuilderLib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{13BAE8CD-2876-44C4-A39A-74F7313FBA80}</ProjectGuid>
+    <ProjectGuid>{9FA7E2CC-B5C6-463B-856A-E0E21EFF93E4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MarketDataServices</RootNamespace>
-    <AssemblyName>MarketDataServices</AssemblyName>
+    <RootNamespace>InvestmentBuilderLib</RootNamespace>
+    <AssemblyName>InvestmentBuilderLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\..\..\..\Program Files (x86)\Microsoft Visual Studio 12.0\Visual Studio Tools for Office\PIA\Office15\Microsoft.Office.Interop.Excel.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,8 +44,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MarketDataService.cs" />
+    <Compile Include="AssetSheetBuilder.cs" />
+    <Compile Include="AssetStatementWriter.cs" />
+    <Compile Include="CashAccountReader.cs" />
+    <Compile Include="CompanyDataReader.cs" />
+    <Compile Include="InvestmentFactory.cs" />
+    <Compile Include="InvestmentRecordBuilder.cs" />
+    <Compile Include="InvestmentRecordBuilderDatabase.cs" />
+    <Compile Include="InvestmentRecordBuilderExcel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TradeLoader.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExcelAccountsManager\ExcelAccountsManager.csproj">
+      <Project>{084edb02-a1ea-430e-8e61-b31fcfd0ca34}</Project>
+      <Name>ExcelAccountsManager</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MarketDataServices\MarketDataServices.csproj">
+      <Project>{13bae8cd-2876-44c4-a39a-74f7313fba80}</Project>
+      <Name>MarketDataServices</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
