--- a/PerformanceBuilder/PerformanceBuilder.csproj
+++ b/PerformanceBuilder/PerformanceBuilder.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HistoricalDataReader.cs" />
     <Compile Include="PerformanceBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
