--- a/InvestmentBuilderClient/InvestmentBuilderClient.csproj
+++ b/InvestmentBuilderClient/InvestmentBuilderClient.csproj
@@ -144,6 +144,10 @@
       <Project>{9fa7e2cc-b5c6-463b-856a-e0e21eff93e4}</Project>
       <Name>InvestmentBuilderLib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\PerformanceBuilderLib\PerformanceBuilderLib.csproj">
+      <Project>{a69b4e7e-44c1-4c52-9c86-5c1148131c79}</Project>
+      <Name>PerformanceBuilderLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="InvestmentBuilderConfig.xml">
