--- a/InvestmentBuilderClient/App.config
+++ b/InvestmentBuilderClient/App.config
@@ -1,13 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-    </configSections>
-    <connectionStrings>
-        <add name="InvestmentBuilderClient.Properties.Settings.InvestmentBuilderTestConnectionString"
-            connectionString="Data Source=TRAVELPC\SQLEXPRESS;Initial Catalog=InvestmentBuilderTest;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+  </configSections>
+
+  <nlog throwExceptions="true" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="consoleLogger" xsi:type="Console" layout="${level} ${message}"></target>
+      <target name="fileLogger" xsi:type="File" layout="${longdate} ${callsite} ${level} ${message}" fileName="${logger}.txt"></target>
+      <target name="viewLogger" xsi:type="MethodCall" className="InvestmentBuilderClient.View.MainView, InvestmentBuilderClient" methodName="LogMethod">
+        <parameter layout="${level}" />
+        <parameter layout="${message}" />
+      </target>
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Debug" maxlevel="Error" writeTo="consoleLogger"></logger>
+      <logger name="*" minlevel="Debug" maxlevel="Error" writeTo="fileLogger"></logger>
+      <logger name="*" minlevel="Debug" maxlevel="Error" writeTo="viewLogger"></logger>
+    </rules>
+  </nlog>
 </configuration>
