--- a/InvestmentBuilderLib/InvestmentBuilderLib.csproj
+++ b/InvestmentBuilderLib/InvestmentBuilderLib.csproj
@@ -24,7 +24,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssetReport.cs" />
     <Compile Include="AssetSheetBuilder.cs" />
     <Compile Include="AssetStatementWriter.cs" />
     <Compile Include="CashAccountReader.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="InvestmentRecordBuilderExcel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TradeLoader.cs" />
+    <Compile Include="UserDataReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExcelAccountsManager\ExcelAccountsManager.csproj">
