--- a/MarketDataServices/MarketDataServices.csproj
+++ b/MarketDataServices/MarketDataServices.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMarketDataSource.cs" />
     <Compile Include="MarketDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
