--- a/InvestmentBuilderTests/InvestmentBuilderTestRunner/InvestmentBuilderTestRunner.csproj
+++ b/InvestmentBuilderTests/InvestmentBuilderTestRunner/InvestmentBuilderTestRunner.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BCA240B5-1BAC-4BFF-AF1D-32A17ADDA1F6}</ProjectGuid>
+    <ProjectGuid>{F40760F0-6E40-4502-AEB8-D56486609445}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PerformanceBuilder</RootNamespace>
-    <AssemblyName>PerformanceBuilder</AssemblyName>
+    <RootNamespace>InvestmentBuilderTestRunner</RootNamespace>
+    <AssemblyName>InvestmentBuilderTestRunner</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\bin\Debug\</OutputPath>
+    <OutputPath>..\..\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -26,27 +26,12 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\bin\Release\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.Configuration">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
-    </Reference>
-    <Reference Include="Office, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -61,20 +46,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ExcelAccountsManager\ExcelAccountsManager.csproj">
-      <Project>{084edb02-a1ea-430e-8e61-b31fcfd0ca34}</Project>
-      <Name>ExcelAccountsManager</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MarketDataServices\MarketDataServices.csproj">
-      <Project>{13bae8cd-2876-44c4-a39a-74f7313fba80}</Project>
-      <Name>MarketDataServices</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PerformanceBuilderLib\PerformanceBuilderLib.csproj">
-      <Project>{a69b4e7e-44c1-4c52-9c86-5c1148131c79}</Project>
-      <Name>PerformanceBuilderLib</Name>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InvestmentBuilderTests.csproj">
+      <Project>{093f417f-31de-4cc9-ad63-3019f5023078}</Project>
+      <Name>InvestmentBuilderTests</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
