added extra datasources

--- a/MarketDataServices/MarketDataServices.csproj
+++ b/MarketDataServices/MarketDataServices.csproj
@@ -58,6 +58,8 @@
     <Compile Include="IMarketDataSource.cs" />
     <Compile Include="MarketDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuandlMarketDataSource.cs" />
+    <Compile Include="WebDataHandler.cs" />
     <Compile Include="YahooMarketDataSource.cs" />
   </ItemGroup>
   <ItemGroup>
