--- a/InvestmentBuilderClient/InvestmentBuilderClient.csproj
+++ b/InvestmentBuilderClient/InvestmentBuilderClient.csproj
@@ -185,6 +185,10 @@
       <Project>{9fa7e2cc-b5c6-463b-856a-e0e21eff93e4}</Project>
       <Name>InvestmentBuilderLib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MarketDataServices\MarketDataServices.csproj">
+      <Project>{13bae8cd-2876-44c4-a39a-74f7313fba80}</Project>
+      <Name>MarketDataServices</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PerformanceBuilderLib\PerformanceBuilderLib.csproj">
       <Project>{a69b4e7e-44c1-4c52-9c86-5c1148131c79}</Project>
       <Name>PerformanceBuilderLib</Name>
