--- a/InvestmentBuilderTests/InvestmentBuilderTests.csproj
+++ b/InvestmentBuilderTests/InvestmentBuilderTests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="TestMarketDataSource.cs" />
     <Compile Include="TradeLoaderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtilityTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InvestmentBuilderLib\InvestmentBuilderLib.csproj">
