--- a/MarketDataServices/MarketDataServices.csproj
+++ b/MarketDataServices/MarketDataServices.csproj
@@ -59,6 +59,7 @@
     <Compile Include="MarketDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuandlMarketDataSource.cs" />
+    <Compile Include="TestFileMarketDataSource.cs" />
     <Compile Include="WebDataHandler.cs" />
     <Compile Include="YahooMarketDataSource.cs" />
   </ItemGroup>
