--- a/InvestmentBuilderLib/InvestmentBuilderLib.csproj
+++ b/InvestmentBuilderLib/InvestmentBuilderLib.csproj
@@ -58,23 +58,22 @@
   <ItemGroup>
     <Compile Include="AssetReport.cs" />
     <Compile Include="AssetReportWriter.cs" />
-    <Compile Include="AssetSheetBuilder.cs" />
-    <Compile Include="AssetStatementWriter.cs" />
-    <Compile Include="CashAccountReader.cs" />
+    <Compile Include="InvestmentBuilder.cs" />
     <Compile Include="CompanyDataReader.cs" />
-    <Compile Include="InvestmentFactory.cs" />
+    <Compile Include="InvestmentData.cs" />
     <Compile Include="InvestmentRecordBuilder.cs" />
-    <Compile Include="InvestmentRecordBuilderDatabase.cs" />
-    <Compile Include="InvestmentRecordBuilderExcel.cs" />
     <Compile Include="InvestmentUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TradeLoader.cs" />
-    <Compile Include="UserDataReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExcelAccountsManager\ExcelAccountsManager.csproj">
       <Project>{084edb02-a1ea-430e-8e61-b31fcfd0ca34}</Project>
       <Name>ExcelAccountsManager</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\InvestmentBuilderCore\InvestmentBuilderCore.csproj">
+      <Project>{a1b060c6-10fa-443b-8191-556d1b03102f}</Project>
+      <Name>InvestmentBuilderCore</Name>
     </ProjectReference>
     <ProjectReference Include="..\MarketDataServices\MarketDataServices.csproj">
       <Project>{13bae8cd-2876-44c4-a39a-74f7313fba80}</Project>
