--- a/SQLServerDataLayer/SQLServerDataLayer.csproj
+++ b/SQLServerDataLayer/SQLServerDataLayer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{13BAE8CD-2876-44C4-A39A-74F7313FBA80}</ProjectGuid>
+    <ProjectGuid>{674585E8-84AA-4111-B675-47F7E13C8CB7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MarketDataServices</RootNamespace>
-    <AssemblyName>MarketDataServices</AssemblyName>
+    <RootNamespace>SQLServerDataLayer</RootNamespace>
+    <AssemblyName>SQLServerDataLayer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -24,27 +24,13 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\bin\Release\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Practices.Unity">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.Configuration">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
-    </Reference>
-    <Reference Include="NLog, Version=3.2.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\ThirdParty\nLog\4.5\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -53,17 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AggregatedMarketDataSource.cs" />
-    <Compile Include="IMarketDataSource.cs" />
-    <Compile Include="MarketDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuandlMarketDataSource.cs" />
-    <Compile Include="TestFileMarketDataSource.cs" />
-    <Compile Include="WebDataHandler.cs" />
-    <Compile Include="YahooMarketDataSource.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="SQLServerCashAccountData.cs" />
+    <Compile Include="SQLServerClientData.cs" />
+    <Compile Include="SQLServerDataLayer.cs" />
+    <Compile Include="SQLServerHistoricalData.cs" />
+    <Compile Include="SQLServerInvestmentRecordData.cs" />
+    <Compile Include="SQLServerUserAccountData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InvestmentBuilderCore\InvestmentBuilderCore.csproj">
