Added chart index config and performance chart view

--- a/InvestmentBuilderClient/App.config
+++ b/InvestmentBuilderClient/App.config
@@ -7,7 +7,8 @@
   <nlog throwExceptions="true" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
       <target name="consoleLogger" xsi:type="Console" layout="${level} ${message}"></target>
-      <target name="fileLogger" xsi:type="File" layout="${longdate} ${callsite} ${level} ${message}" fileName="${logger}.txt"></target>
+      <target name="fileLogger" xsi:type="File" layout="${longdate} ${callsite} ${level} ${message}" fileName="InvestmentBuilder.log"></target>
+      <!--${logger}.txt-->
       <target name="viewLogger" xsi:type="MethodCall" className="InvestmentBuilderClient.View.MainView, InvestmentBuilderClient" methodName="LogMethod">
         <parameter layout="${level}" />
         <parameter layout="${message}" />
