--- a/InvestmentBuilderClient/InvestmentBuilderClient.csproj
+++ b/InvestmentBuilderClient/InvestmentBuilderClient.csproj
@@ -137,12 +137,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ViewModel\ReceiptDataViewModel.cs" />
-    <Compile Include="View\TradeView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\TradeView.Designer.cs">
-      <DependentUpon>TradeView.cs</DependentUpon>
-    </Compile>
     <Compile Include="ViewModel\TradeViewModel.cs" />
     <EmbeddedResource Include="View\AddIndexView.resx">
       <DependentUpon>AddIndexView.cs</DependentUpon>
@@ -189,9 +183,6 @@
     <EmbeddedResource Include="View\PortfolioView.resx">
       <DependentUpon>PortfolioView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\TradeView.resx">
-      <DependentUpon>TradeView.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -230,6 +221,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="InvestmentBuilderConfig.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TestMarketData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
