--- a/SQLServerDataLayer/SQLServerDataLayer.csproj
+++ b/SQLServerDataLayer/SQLServerDataLayer.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLAuthorizationManager.cs" />
     <Compile Include="SQLServerCashAccountData.cs" />
     <Compile Include="SQLServerClientData.cs" />
     <Compile Include="SQLServerDataLayer.cs" />
