--- a/InvestmentBuilderCore/InvestmentBuilderCore.csproj
+++ b/InvestmentBuilderCore/InvestmentBuilderCore.csproj
@@ -57,7 +57,9 @@
     <Compile Include="ContainerManager.cs" />
     <Compile Include="IDataLayer.cs" />
     <Compile Include="InvestmentInformation.cs" />
+    <Compile Include="InvestmentUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TradeLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
